# AttendanceTrackerBot

./: .dockerignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
bot/: enums.py  keyboards.py  schemas.py  utils.py
bot/database/: core.py  models.py  queries.py
bot/handlers/: add_skip_handlers.py  my_skips_handlers.py  show_statistics_handlers.py  start_handlers.py  utils.py
